@@ -1,3 +1,7 @@
+2016-05-29  SilverNexus
+	* output.c: Use fwrite() instead of printf() when telling the user
+	  the location of the output file.
+
 2016-05-28  SilverNexus
 	* search.c: Extract the needle length checks from the case-insensitive search
 	  function and put them outside the function. Use recent macros to ease
